--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <h1>Ефективні рішення для вашого бізнесу</h1>
-      <h2 hidden>Рішення</h2>
+
       <button type="button">Замовити послугу</button>
 
       <section>
@@ -58,7 +58,7 @@
       </section>
 
       <section>
-        <p>Чим ми займаемося</p>
+        <h2>Чим ми займаемося</h2>
         <ul>
           <li>
             <img src="/images/img-what-we-do-1.jpg" alt="Робота з кодом" />
@@ -72,7 +72,7 @@
         </ul>
       </section>
       <section>
-        <p>Наша команда</p>
+        <h2>Наша команда</h2>
         <ul>
           <li>
             <img
