--- a/index.html
+++ b/index.html
@@ -61,13 +61,28 @@
         <h2>Чим ми займаемося</h2>
         <ul>
           <li>
-            <img src="/images/img-what-we-do-1.jpg" alt="Робота з кодом" />
+            <img
+              src="/images/img-what-we-do-1.jpg"
+              alt="Робота з кодом"
+              width="370"
+              height="295"
+            />
           </li>
           <li>
-            <img src="/images/img-what-we-do-2.jpg" alt="Маркетинг" />
+            <img
+              src="/images/img-what-we-do-2.jpg"
+              alt="Маркетинг"
+              width="370"
+              height="295"
+            />
           </li>
           <li>
-            <img src="/images/img-what-we-do-3.jpg" alt="Графіка" />
+            <img
+              src="/images/img-what-we-do-3.jpg"
+              alt="Графіка"
+              width="370"
+              height="295"
+            />
           </li>
         </ul>
       </section>
@@ -78,6 +93,8 @@
             <img
               src="/images/img-employer-1.jpg"
               alt="Співробітник Игорь Демьяненко"
+              width="270"
+              height="260"
             />
             <p>Игор Демьяненко</p>
             <p lang="en">Product Designer</p>
@@ -86,6 +103,8 @@
             <img
               src="/images/img-employer-2.jpg"
               alt="Співробітник Ольга Репина"
+              width="270"
+              height="260"
             />
             <p>Ольга Рєпина</p>
             <p lang="en">Frontend Developer</p>
@@ -94,6 +113,8 @@
             <img
               src="/images/img-employer-3.jpg"
               alt="Співробітник Микола Тарасов"
+              width="270"
+              height="260"
             />
             <p>Микола Тарасов</p>
             <p lang="en">Marketing</p>
@@ -102,6 +123,8 @@
             <img
               src="/images/img-employer-4.jpg"
               alt="Співробітник Михайло Ермаков"
+              width="270"
+              height="260"
             />
             <p>Михайло Ермаков</p>
             <p lang="en">UI Designer</p>
