Try to fix path

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-what-we-do-1.jpg"
+              src="./images/img-what-we-do-1.jpg"
               alt="Робота з кодом"
               width="370"
               height="295"
@@ -70,7 +70,7 @@
           </li>
           <li>
             <img
-              src="/images/img-what-we-do-2.jpg"
+              src="./images/img-what-we-do-2.jpg"
               alt="Маркетинг"
               width="370"
               height="295"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="/images/img-what-we-do-3.jpg"
+              src="./images/img-what-we-do-3.jpg"
               alt="Графіка"
               width="370"
               height="295"
@@ -91,7 +91,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-employer-1.jpg"
+              src="./images/img-employer-1.jpg"
               alt="Співробітник Игорь Демьяненко"
               width="270"
               height="260"
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="/images/img-employer-2.jpg"
+              src="./images/img-employer-2.jpg"
               alt="Співробітник Ольга Репина"
               width="270"
               height="260"
@@ -111,7 +111,7 @@
           </li>
           <li>
             <img
-              src="/images/img-employer-3.jpg"
+              src="./images/img-employer-3.jpg"
               alt="Співробітник Микола Тарасов"
               width="270"
               height="260"
@@ -121,7 +121,7 @@
           </li>
           <li>
             <img
-              src="/images/img-employer-4.jpg"
+              src="./images/img-employer-4.jpg"
               alt="Співробітник Михайло Ермаков"
               width="270"
               height="260"
