--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
       <a href="/index.html">Web<span>Studio</span></a>
       <nav>
         <ul>
-          <li>Студія</li>
-          <li>Портфоліо</li>
-          <li>Контакти</li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-      <h1>Ефективні рішення для вашого бізнесу</h1>
-
-      <button type="button">Замовити послугу</button>
-
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
       <section>
         <ul>
           <li>
@@ -96,7 +98,7 @@
               width="270"
               height="260"
             />
-            <p>Игор Демьяненко</p>
+            <h3>Игор Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -106,7 +108,7 @@
               width="270"
               height="260"
             />
-            <p>Ольга Рєпина</p>
+            <h3>Ольга Рєпина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -116,7 +118,7 @@
               width="270"
               height="260"
             />
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -126,7 +128,7 @@
               width="270"
               height="260"
             />
-            <p>Михайло Ермаков</p>
+            <h3>Михайло Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
@@ -134,9 +136,20 @@
     </main>
     <footer>
       <a href="/index.html">Web<span>Studio</span></a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/xmvjDF4cQr8UGCpK6"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
